build_output.txt
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:mergeDebugNativeDebugMetadata NO-SOURCE
> Task :app:dataBindingMergeDependencyArtifactsDebug UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:dataBindingGenBaseClassesDebug UP-TO-DATE
> Task :app:generateDebugRFile UP-TO-DATE
> Task :app:compileDebugKotlin NO-SOURCE
> Task :app:javaPreCompileDebug UP-TO-DATE

> Task :app:compileDebugJavaWithJavac
C:\Users\mrsbz\OneDrive\Documents\CampusSkill\app\src\main\java\com\muproject\campusskill\adapter\ServiceAdapter.java:84: error: cannot find symbol
            Log.d("ServiceAdapter", "Service Clicked: " + service.getTitle() + " | Seller ID: " + service.getSellerId());
            ^
  symbol:   variable Log
  location: class ServiceAdapter
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

1 error
> Task :app:compileDebugJavaWithJavac FAILED

[Incubating] Problems report is available at: file:///C:/Users/mrsbz/OneDrive/Documents/CampusSkill/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  Note: Recompile with -Xlint:deprecation for details.
  C:\Users\mrsbz\OneDrive\Documents\CampusSkill\app\src\main\java\com\muproject\campusskill\adapter\ServiceAdapter.java:84: error: cannot find symbol
              Log.d("ServiceAdapter", "Service Clicked: " + service.getTitle() + " | Seller ID: " + service.getSellerId());
              ^
    symbol:   variable Log
    location: class ServiceAdapter
  Note: Some input files use or override a deprecated API.
  1 error

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 8s
10 actionable tasks: 1 executed, 9 up-to-date
